[project]
name = "bach-ai_doctor_api_ai_medical_chatbot_healthcare_ai_assistant"
version = "1.0.0"
description = "RapidAPI: bilgisamapi-api2/ai-doctor-api-ai-medical-chatbot-healthcare-ai-assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_ai_doctor_api_ai_medical_chatbot_healthcare_ai_assistant = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-ai_doctor_api_ai_medical_chatbot_healthcare_ai_assistant"
Repository = "https://github.com/bachstudio/bach-ai_doctor_api_ai_medical_chatbot_healthcare_ai_assistant"
Documentation = "https://github.com/bachstudio/bach-ai_doctor_api_ai_medical_chatbot_healthcare_ai_assistant#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'